refactor: update drivers according to the updated SQL Schema
Se realizaron los siguientes ajustes en los controladores para reflejar fielmente el esquema actualizado:

ReservaController.java
- En el endpoint GET /reservas/{idReserva} (E2), se actualizó el mock de respuesta para incluir un acompañante con la estructura atómica completa: new AcompananteDto("Ana", "María", "Pérez", "Gómez", "cedula", "001-120395-0002X").
UsuarioController.java
- En el endpoint GET /usuarios/{idUsuario}/historial/{idReserva} (H4), se enriqueció el mock con un acompañante y respuestas de formulario dinámico basadas en el contrato JSON oficial de la Sección 5.3 de Arquitectura_API_CNM.docx.